--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -19,18 +19,18 @@
         />
 
     <LinearLayout
-        android:layout_marginTop="150px"
+        android:layout_marginTop="140px"
         android:layout_below="@+id/tv1"
         android:id="@+id/linear1"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
+        android:layout_height="500px"
+        android:orientation="vertical"
         android:padding="10px"
         tools:ignore="MissingConstraints">
 
         <androidx.cardview.widget.CardView
             android:layout_margin="10px"
-            android:layout_width="0dp"
+            android:layout_width="match_parent"
             android:layout_height="500px"
             android:layout_weight="1"
             android:backgroundTint="#bbbbef"
@@ -40,19 +40,18 @@
             >
             <TextView
                 android:textSize="50px"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="center"
                 android:layout_gravity="center"
-                android:text="FLAT SLAB
-                (RECTANGULAR COL.)"
-                android:textColor="@color/white"/>
+                android:text="RCC FLAT SLAB DESIGN\n(RECTANGULAR COLUMN)"
+                android:textColor="@color/black"/>
         </androidx.cardview.widget.CardView>
 
 
         <androidx.cardview.widget.CardView
             android:layout_margin="10px"
-            android:layout_width="0dp"
+            android:layout_width="match_parent"
             android:layout_height="500px"
             android:layout_weight="1"
             android:backgroundTint="#79e9c3"
@@ -65,43 +64,45 @@
                 android:layout_height="wrap_content"
                 android:gravity="center"
                 android:layout_gravity="center"
-                android:text="FLAT SLAB
-                (RECTANGULAR CO.)+DROP"
-                android:textColor="@color/white"/>
+                android:text="RCC FLAT SLAB DESIGN\n(RECTANGULAR COLUMN WITH DROP\nAND COLUMN HEAD)"
+                android:textColor="@color/black"/>
         </androidx.cardview.widget.CardView>
     </LinearLayout>
 
     <LinearLayout
+        android:id="@+id/linear2"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="500px"
         android:layout_below="@id/linear1"
-        android:orientation="horizontal"
+        android:orientation="vertical"
         tools:ignore="MissingConstraints"
+        android:padding="10px"
         >
 
         <androidx.cardview.widget.CardView
             android:layout_margin="10px"
-            android:layout_width="0dp"
+            android:layout_width="match_parent"
             android:layout_height="500px"
             android:layout_weight="1"
             android:backgroundTint="#f9b15c"
             android:clickable="true"
             android:onClick="function3"
             android:focusable="true">
+
             <TextView
-                android:textSize="50px"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:gravity="center"
                 android:layout_gravity="center"
-                android:text="FLAT SLAB
-                (CIRCULAR COL.)"
-                android:textColor="@color/white"/>
+                android:gravity="center"
+                android:text="RCC FLAT SLAB DESIGN\n(CIRCULAR COLUMN WITH COLUMN HEAD)
+"
+                android:textColor="@color/black"
+                android:textSize="50px" />
         </androidx.cardview.widget.CardView>
 
         <androidx.cardview.widget.CardView
             android:layout_margin="10px"
-            android:layout_width="0dp"
+            android:layout_width="match_parent"
             android:layout_height="500px"
             android:layout_weight="1"
             android:backgroundTint="#ffaea9"
@@ -114,13 +115,23 @@
                 android:layout_height="wrap_content"
                 android:gravity="center"
                 android:layout_gravity="center"
-                android:text="FLAT SLAB
-                (CIRCULAR COL.)+DROP"
-                android:textColor="@color/white"/>
+                android:text="RCC FLAT SLAB DESIGN\n(CIRCULAR COLUMN WITH DROP AND COLUMN HEAD)"
+                android:textColor="@color/black"/>
         </androidx.cardview.widget.CardView>
 
 
     </LinearLayout>
 
+    <TextView
+        android:drawableRight="@drawable/ic_pdf"
+        android:layout_below="@+id/linear2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="20px"
+        android:textSize="60px"
+        android:textColor="@color/black"
+        android:clickable="true"
+        android:focusable="true"
+        android:text="Download PDF "/>
 
 </RelativeLayout>
